--- a/html/login.html
+++ b/html/login.html
@@ -15,7 +15,7 @@
 
     <div class="boxEsq">
         <div class="navCont">
-           <a href="/html/index.html"> <img src="/img/seta.png"> <span> VOLTAR </span>  </a> 
+           <a href="/html/projeto.html"> <img src="/img/seta.png"> <span> VOLTAR </span>  </a> 
         </div>
     </div>
     
