--- a/html/sobre.html
+++ b/html/sobre.html
@@ -27,7 +27,7 @@
         </div>
     
         <div class="person">
-            <img src="/img/github.png" alt="Foto da pessoa 1">
+            <img src="/img/WhatsApp Image 2023-06-01 at 11.38.59.jpeg" alt="Foto da pessoa 1">
             <h2>Felipe</h2>
             <p>Gerente de Projetos</p>
             <p>Analista de requisitos</p>
@@ -39,7 +39,7 @@
           </div>
           
           <div class="person">
-            <img src="/img/github.png" alt="Foto da pessoa 2">
+            <img src="/img/WhatsApp Image 2023-05-31 at 14.23.22.jpeg" alt="Foto da pessoa 2">
             <h2>Vinícius</h2>
             <p>Analista de Requisitos</p>
             <p>P.O.</p>
