novas paginas adicionadas

--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -12,7 +12,7 @@
     
 
     <div class="navCont">
-        <a href="/html/projeto.html"> <img src="/img/setaverde.png"> <span> VOLTAR </span>  </a> 
+        <a href="/html/projeto.html"> <img src="/img/seta.png"> <span> VOLTAR </span>  </a> 
      </div>
 
     
